# Spear

./: .gitignore  README.md
Agent/: CMakeLists.txt
Agent/inc/: API.h  Command.h  DebugLog.h  Instance.h  KeyWord.h  Obfuscation.h  Tansportion.h  Tasks.h  Transportion.h  Utilt.h
Agent/src/: API.c  API.cpp  Command.cpp  SpearAgent.cpp  Tansportion.cpp  Tasks.cpp  Transportion.cpp  Utilt.cpp  test.c
TeamServer/: Tasks.py  TeamServer.py
TeamServer/Certs/: ca.crt  ca.key  server.crt  server.key
TeamServer/util/: Banner.py  Loading.py
